--- a/Modulo1/Desafio/src/Post/style.css
+++ b/Modulo1/Desafio/src/Post/style.css
@@ -1,16 +1,19 @@
 .post{
     background-color: #FFFFFF;
     border: 1px solid #BBBBBB;
-    width: 400px;
-    height: 200px;
-    display: flex;
+    width: 500px;
+    min-height: 200px;
     margin: 40px auto;
-    box-shadow: 2px 2px 8px #aaa;
-    background-color: blue;
+    /* box-shadow: 2px 2px 8px #aaa; */
 }
 
-.post p{
+.post > p{
+    padding: 20px 15px 30px;
+    font-size: 15px;
     color: #555;
-    background-color: red;
-    clear: both;
+    display: flex;
+    vertical-align: middle;
+    align-items: center;
+    vertical-align: bottom;
+    font-size: 14px;
 }
