--- a/Modulo1/Desafio/src/Post/PostHeader/style.css
+++ b/Modulo1/Desafio/src/Post/PostHeader/style.css
@@ -1,16 +1,29 @@
 .post-header{
     display: flex;
-    padding: 10px;
-    border-bottom: 1px solid #bbb;
+    padding: 15px 10px;
+    border-bottom: 1px solid #ccc;
     height: 40%;
-    width: 100%;
     margin: 10px;
-    background-color: green;
+    line-height: 24px;
+}
+
+.post-header p{
+    margin-left: 10px;
+    color: #888;
 }
 .profile-photo{
     image-rendering: optimizeQuality;
-    width: 45px;
+    width: 50px;
     height: 50px;
     border-radius: 50px;
+}
+
+#username{
+    font-weight: bold;
+    font-size: 15px;;
+}
+
+#time-ago{
+    font-size: 13px;
 }
 
